@@ -1,3 +1,7 @@
+2002-01-14  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* Resolver.cc: fixed coredump on unknown service.
+
 2001-01-03  jfaith <jfaith@cemsys.com>
 
 	* resource.cc: (OrderValidate) fix off by one xmalloc bug.
